--- a/Responsiveness-Grid/style.css
+++ b/Responsiveness-Grid/style.css
@@ -1,7 +1,10 @@
 <style>
     /* add CSS styles for navbar, hero, and other sections here */
     @import url('https://fonts.googleapis.com/css2?family=Sono:wght@200&display=swap');
-
+    @font-face {
+      font-family: Sono;
+      src: url(https://fonts.googleapis.com/css2?family=Sono:wght@200&display=swap);
+    }
     body {
       font-family: 'Sono', sans-serif;
     }
@@ -43,6 +46,7 @@
 
     h1 {
       margin-bottom: 20px;
+      text-align: center;
     }
 
     p {
