--- a/Responsiveness/style.css
+++ b/Responsiveness/style.css
@@ -2,6 +2,11 @@
     /* add CSS styles for navbar, hero, and other sections here */
     @import url('https://fonts.googleapis.com/css2?family=Sono:wght@200&display=swap');
 
+    @font-face {
+      font-family: Sono;
+      src: url(https://fonts.googleapis.com/css2?family=Sono:wght@200&display=swap);
+    }
+
     body {
       font-family: 'Sono', sans-serif;
     }
